clickhouse/test/corpus/insert_returning.txt
================================================================================
INSERT RETURNING
================================================================================

INSERT INTO t (id, val) VALUES (1, 'a') RETURNING id;
INSERT INTO t SELECT * FROM src RETURNING *;

--------------------------------------------------------------------------------

(program
  (statement
    (insert
      (keyword_insert)
      (keyword_into)
      (object_reference
        (identifier))
      (list
        (column
          (identifier))
        (column
          (identifier)))
      (keyword_values)
      (list
        (literal)
        (literal)))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (field
            (identifier))))))
  (statement
    (insert
      (keyword_insert)
      (keyword_into)
      (object_reference
        (identifier))
      (select
        (keyword_select)
        (select_expression
          (term
            (all_fields))))
      (from
        (keyword_from)
        (relation
          (object_reference
            (identifier)))))
    (returning
      (keyword_returning)
      (select_expression
        (term
          (all_fields))))))
