clickhouse/test/corpus/system_commands.txt
================================================================================
SYSTEM FLUSH LOGS
================================================================================

SYSTEM FLUSH LOGS

--------------------------------------------------------------------------------

(program
  (statement
    (system_statement
      (keyword_system)
      (keyword_flush)
      (keyword_logs))))

================================================================================
SYSTEM STOP MERGES
================================================================================

SYSTEM STOP MERGES t

--------------------------------------------------------------------------------

(program
  (statement
    (system_statement
      (keyword_system)
      (keyword_stop)
      (keyword_merges)
      (object_reference
        name: (identifier)))))

================================================================================
SYSTEM START MERGES
================================================================================

SYSTEM START MERGES t

--------------------------------------------------------------------------------

(program
  (statement
    (system_statement
      (keyword_system)
      (keyword_start)
      (keyword_merges)
      (object_reference
        name: (identifier)))))

================================================================================
SYSTEM RELOAD DICTIONARIES
================================================================================

SYSTEM RELOAD DICTIONARIES

--------------------------------------------------------------------------------

(program
  (statement
    (system_statement
      (keyword_system)
      (keyword_reload)
      (keyword_dictionaries))))

================================================================================
SYSTEM DROP DNS CACHE
================================================================================

SYSTEM DROP DNS CACHE

--------------------------------------------------------------------------------

(program
  (statement
    (system_statement
      (keyword_system)
      (keyword_drop)
      (keyword_dns)
      (keyword_cache))))

